- Added functional Interface for ClickEventHandlers of reomving and addinf movies to the watchlist - Added static Singleton Patterns to the repos and DatabaseManager - Made adjzstments in MovieCell - Implemented error handling for UI