@@ -8,6 +8,8 @@ import com.j256.ormlite.dao.DaoManager;
 import com.j256.ormlite.jdbc.JdbcConnectionSource;
 import com.j256.ormlite.support.ConnectionSource;
 
+import java.sql.Connection;
+import java.sql.PreparedStatement;
 import java.sql.SQLException;
 import java.util.List;
 
@@ -15,11 +17,24 @@ public class WatchlistRepository {
     private static final String DB_URL = "jdbc:h2:file:./db/fhmdb";     //besser irgendwo public
     private ConnectionSource connectionSource = null;
     private Dao<WatchlistMovieEntity, Integer> dao;
+    private static WatchlistRepository instance;
 
-    public WatchlistRepository() throws DataBaseException, SQLException {
-        createConnectionSource();
-        dao = DaoManager.createDao(connectionSource, WatchlistMovieEntity.class);
+
+    public int size() throws SQLException {
+        return (int) dao.countOf();
     }
+
+    public WatchlistRepository() throws DataBaseException {
+        try {
+            this.dao = DaoManager.createDao(
+                    DatabaseManager.getInstance().getConnectionSource(), // Wiederverwendung des DB-Managers
+                    WatchlistMovieEntity.class
+            );
+        } catch (SQLException e) {
+            throw new DataBaseException("DAO creation failed", e);
+        }
+    }
+
 
     private void createConnectionSource() throws DataBaseException {
         try {
@@ -28,19 +43,29 @@ public class WatchlistRepository {
             throw new DataBaseException(e.getMessage());
         }
     }
-
     //get all watchlist movies from db
     public List<WatchlistMovieEntity> getWatchlist() throws SQLException {
         return dao.queryForAll();
+
     }
 
     //insert or update
-    public void addToWatchlist(WatchlistMovieEntity entityToAdd) throws SQLException {
-        dao.createOrUpdate(entityToAdd);
+    public void addToWatchlist(WatchlistMovieEntity entity) throws SQLException {
+        // check if movie already is in watchlist
+        if (dao.queryForEq("apiId", entity.getApiId()).isEmpty()) {
+            dao.create(entity);
+        }
+    }
+
+    public WatchlistMovieEntity getMovieByApiId(String apiId) throws SQLException
+    {
+        return dao.queryBuilder()
+                .where().eq("apiId", apiId)
+                .queryForFirst();
     }
 
     //delete all WatchlistMovieEntity from list
-    public int removefromWatchlist(String apiId) throws SQLException {
+    public int removeFromWatchlist(String apiId) throws SQLException {
         //load entry
         List<WatchlistMovieEntity> foundList = dao.queryForEq("apiId", apiId);
 
@@ -48,10 +73,38 @@ public class WatchlistRepository {
         if (foundList.isEmpty() == true){
             return 0;
         } else {
-            WatchlistMovieEntity first = foundList.getFirst();     //there can only be one because of id
+            WatchlistMovieEntity first = foundList.get(0);   //there can only be one because of id
 
             //first delete
             return dao.delete(first);
         }
     }
+
+    public void clearWatchlist() throws SQLException {
+        try
+        {
+            dao.deleteBuilder().delete();
+        }
+        catch (SQLException e)
+        {
+            System.out.println("Could not delete entries in watchllist: " + e.getMessage());
+        }
+    }
+
+
+    public static WatchlistRepository getInstance()  {
+
+        if (instance == null)
+        {
+            try
+            {
+                instance = new WatchlistRepository();
+            }
+            catch (DataBaseException e) {
+                System.out.println("Error getting instance of WatchlistRepository: " + e.getMessage());
+            }
+        }
+        return instance;
+    }
+
 }
